added support for the armclang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,16 +22,18 @@ elseif(EVB MATCHES "app_mcu_h7")
 elseif(EVB MATCHES "nucleo_h563zi")
     add_subdirectory(${BSP_ROOT_DIR}/stm/nucleo_h563zi_master ${CMAKE_BINARY_DIR}/nucleo_h563zi)
     target_link_libraries(board_support INTERFACE nucleo_h563zi)
-elseif(EVB MATCHES "eval_ade9178")
+elseif(EVB STREQUAL "eval_ade9178")
     add_subdirectory(${BSP_ROOT_DIR}/max/eval_ade9178 ${CMAKE_BINARY_DIR}/eval_ade9178)
     target_link_libraries(board_support INTERFACE eval_ade9178)
+elseif(EVB STREQUAL "eval_ade9178_slave")
+    add_subdirectory(${BSP_ROOT_DIR}/max/eval_ade9178_slave ${CMAKE_BINARY_DIR}/eval_ade9178_slave)
+    target_link_libraries(board_support INTERFACE eval_ade9178_slave)
 elseif(EVB MATCHES "dummy_board")
-	set(DUMMY_SRC ${BSP_ROOT_DIR}/dummy_board/adi_evb.c)
-	set(DUMMY_INCLUDE ${BSP_ROOT_DIR}/generic/include
-					${BSP_ROOT_DIR}/dummy_board/config
-	   )
-	target_sources(board_support INTERFACE ${DUMMY_SRC})
-	target_include_directories(board_support INTERFACE ${DUMMY_INCLUDE})
+    add_subdirectory(${BSP_ROOT_DIR}/dummy_board ${CMAKE_BINARY_DIR}/dummy_board)
+    target_link_libraries(board_support INTERFACE dummy_board)
+elseif(EVB MATCHES "x86")
+    add_subdirectory(${BSP_ROOT_DIR}/simul_x86 ${CMAKE_BINARY_DIR}/simul_x86)
+    target_link_libraries(board_support INTERFACE x86)
 else()
     add_subdirectory(${BSP_ROOT_DIR}/stm/nucleo_h563zi_master ${CMAKE_BINARY_DIR}/nucleo_h563zi)
     target_link_libraries(board_support INTERFACE nucleo_h563zi)
